--- a/package.json
+++ b/package.json
@@ -44,6 +44,16 @@
       ".tsx"
     ]
   },
+  "jest": {
+    "moduleNameMapper": {
+      "@/(.*)$": "<rootDir>/src/$1"
+    },
+    "testEnvironment": "node",
+    "transform": {
+      "^.+.tsx?$": ["ts-jest", {}]
+    },
+    "modulePaths": ["<rootDir>/src", "<rootDir>/node_modules"]
+  },
   "dependencies": {
     "@emotion/is-prop-valid": "^1.2.1",
     "@emotion/react": "^11.11.1",
@@ -89,12 +99,24 @@
     "start-server-and-test": "^2.0.0",
     "styled-components": "^6.0.4",
     "supabase": "^1.142.2",
-    "typescript": "^5.2.2",
     "uuid": "^9.0.1",
     "winston": "^3.12.0",
     "winston-cloudwatch": "^6.2.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.24.7",
+    "@cypress/code-coverage": "^3.11.0",
+    "@jest/globals": "^29.7.0",
+    "@snaplet/copycat": "^5.0.0",
+    "@snaplet/seed": "^0.88.2",
+    "@types/cypress__code-coverage": "^3.10.0",
+    "@types/cypress-dotenv": "^2.0.1",
+    "@types/file-saver": "^2.0.7",
+    "@types/jest": "^29.5.12",
+    "@types/seedrandom": "^3.0.8",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "@cypress/code-coverage": "^3.11.0",
     "@next/bundle-analyzer": "^14.2.5",
     "@snaplet/copycat": "^5.0.0",
@@ -117,8 +139,12 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.7.0",
     "seedrandom": "^3.0.5",
     "snaplet": "^0.88.2",
     "ts-node": "^10.9.2"
+    "snaplet": "^0.88.2",
+    "ts-jest": "^29.2.2",
+    "typescript": "^5.5.3"
   }
 }
