--- a/package.json
+++ b/package.json
@@ -142,7 +142,7 @@
     "jest": "^29.7.0",
     "seedrandom": "^3.0.5",
     "snaplet": "^0.88.2",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
     "snaplet": "^0.88.2",
     "ts-jest": "^29.2.2",
     "typescript": "^5.5.3"
