--- a/package.json
+++ b/package.json
@@ -101,7 +101,8 @@
     "supabase": "^1.142.2",
     "uuid": "^9.0.1",
     "winston": "^3.12.0",
-    "winston-cloudwatch": "^6.2.0"
+    "winston-cloudwatch": "^6.2.0",
+    "typescript": "^5.5.3"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.24.7",
@@ -144,7 +145,6 @@
     "snaplet": "^0.88.2",
     "ts-node": "^10.9.2",
     "snaplet": "^0.88.2",
-    "ts-jest": "^29.2.2",
-    "typescript": "^5.5.3"
+    "ts-jest": "^29.2.2"
   }
 }
