--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -130,3 +130,42 @@ jobs:
           name: videos
           path: cypress/videos
           retention-days: 1
+
+  jest_tests:
+    name: Run Jest tests
+    runs-on: ubuntu-latest
+    env:
+      NEXT_PUBLIC_SUPABASE_URL: http://127.0.0.1:54321
+      NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{secrets.SUPABASE_LOCAL_ANON_KEY}}
+      CLOUDWATCH_LOG_GROUP: ${{secrets.AWS_CLOUDWATCH_LOG_GROUP}}
+      CLOUDWATCH_LOG_STREAM: ${{secrets.AWS_CLOUDWATCH_LOG_STREAM}}
+      CLOUDWATCH_ACCESS_KEY: ${{secrets.AWS_CLOUDWATCH_ACCESS_KEY}}
+      CLOUDWATCH_SECRET_ACCESS_KEY: ${{secrets.AWS_CLOUDWATCH_SECRET_ACCESS_KEY}}
+    steps:
+      - name: Checkout this repo
+        uses: actions/checkout@v4
+
+      - name: Install npm
+        uses: actions/setup-node@v4
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Start local Supabase instance
+        run: npx supabase start
+
+      - name: Create users for the local Supabase instance
+        run: npx ts-node supabase/tools/createUserForEachRole.ts
+
+      - name: Create bucket for the local Supabase instance
+        run: npx ts-node supabase/tools/createStorage.ts
+
+      - name: Remove files irrelevant files that may cause TypeScript errors
+        run:
+          rm -f ./supabase/seed/seed.mts
+
+      - name: Compile
+        run: npm run build
+  
+      - name: Run jest tests
+        run: npm run jest:all
