--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "lint": "npm run typecheck && next lint --dir . --ignore-path .gitignore",
     "lint_fix": "npm run typecheck && next lint --fix --dir . --ignore-path .gitignore",
     "lint:ci": "next lint --dir . --ignore-path .gitignore && npm run typecheck",
-    "test": "start-server-and-test start:test_server 3200 cypress:all && jest:all",
-    "test:component": "start-server-and-test start:test_server 3200 cypress:component && npm run jest:component",
-    "test:e2e": "start-server-and-test start:test_server 3200 cypress:e2e",
+    "test": "npm run cypress:all && npm run jest:all",
+    "test:component": "npm run cypress:component && npm run jest:component",
+    "test:e2e": "cypress:e2e",
     "test:coverage": "npm run coverage:generate && npm run coverage:run_tests || npm run coverage:report",
     "cypress:all": "npm run cypress:component && npm run cypress:e2e",
-    "cypress:component": "npx cypress run --component",
-    "cypress:e2e": "npx cypress run --e2e",
+    "cypress:component": "start-server-and-test start:test_server 3200 _cypress:component",
+    "_cypress:component": "npx cypress run --component",
+    "cypress:e2e": "start-server-and-test start:test_server 3200 _cypress:e2e",
+    "_cypress:e2e": "npx cypress run --e2e",
     "cypress:open": "start-server-and-test 'next start -p 3100' 3100 'npx cypress open --config baseUrl=http://localhost:3100'",
     "jest:all": "npm run jest:component", 
     "jest:component": "npx jest",
