--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Compile
         run: npm run build
 
-      - name: Run component tests
+      - name: Run Cypress component tests
         run: npm run cypress:component
 
       - name: Upload Screenshots
@@ -112,7 +112,7 @@ jobs:
       - name: Compile
         run: npm run build
 
-      - name: Run e2e tests
+      - name: Run Cypress e2e tests
         run: npm run cypress:e2e
 
       - name: Upload Screenshots
@@ -150,15 +150,6 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-
-      - name: Start local Supabase instance
-        run: npx supabase start
-
-      - name: Create users for the local Supabase instance
-        run: npx ts-node supabase/tools/createUserForEachRole.ts
-
-      - name: Create bucket for the local Supabase instance
-        run: npx ts-node supabase/tools/createStorage.ts
 
       - name: Remove files irrelevant files that may cause TypeScript errors
         run:
