--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "test:e2e": "cypress:e2e",
     "test:coverage": "npm run coverage:generate && npm run coverage:run_tests || npm run coverage:report",
     "cypress:all": "npm run cypress:component && npm run cypress:e2e",
-    "cypress:component": "start-server-and-test start:test_server 3200 _cypress:component",
+    "cypress:component": "start-server-and-test start:test_server 3200 'npx cypress run --component'",
     "_cypress:component": "npx cypress run --component",
-    "cypress:e2e": "start-server-and-test start:test_server 3200 _cypress:e2e",
+    "cypress:e2e": "start-server-and-test start:test_server 3200 'npx cypress run --e2e'",
     "_cypress:e2e": "npx cypress run --e2e",
     "cypress:open": "start-server-and-test 'next start -p 3100' 3100 'npx cypress open --config baseUrl=http://localhost:3100'",
     "jest:all": "npm run jest:component", 
