--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
   },
   "jest": {
     "moduleNameMapper": {
-      "@/(.*)$": "<rootDir>/src/$1"
+      "@/(.*)$": "<rootDir>/src/$1",
+      "^jose": "jose"
     },
     "moduleFileExtensions": [
       "js",
@@ -59,6 +60,9 @@
       "ts"
     ],
     "testEnvironment": "jsdom",
+    "setupFiles": [
+      "./jest.setup.js"
+    ],
     "transform": {
       "^.+\\.(ts|tsx)?$": "ts-jest"
     },
@@ -118,6 +122,7 @@
     "styled-components": "^6.0.4",
     "supabase": "^1.142.2",
     "typescript": "^5.5.3",
+    "util": "^0.12.5",
     "uuid": "^9.0.1",
     "winston": "^3.12.0",
     "winston-cloudwatch": "^6.2.0"
@@ -163,6 +168,7 @@
     "react-test-renderer": "^18.3.1",
     "seedrandom": "^3.0.5",
     "snaplet": "^0.88.2",
+    "text-encoding": "^0.7.0",
     "ts-jest": "^29.2.2",
     "ts-node": "^10.9.2"
   }
