--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "@snaplet/seed": "^0.88.2",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/cypress__code-coverage": "^3.10.0",
     "@types/cypress-dotenv": "^2.0.1",
     "@types/file-saver": "^2.0.7",
