VFB-292 WIP fix lint errors

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     ],
     "testEnvironment": "jsdom",
     "setupFiles": [
-      "./jest.setup.js"
+      "./jest.setup.ts"
     ],
     "transform": {
       "^.+\\.(ts|tsx)?$": "ts-jest"
