--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
     "@react-pdf/renderer": "^3.1.12",
     "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/gotrue-js": "^2.31.0",
-    "@supabase/supabase-js": "^2.26.0",
+    "@supabase/ssr": "^0.4.0",
+    "@supabase/supabase-js": "^2.44.4",
     "@types/file-saver": "^2.0.7",
     "@types/node": "20.3.1",
     "@types/pdf-parse": "^1.1.1",
