--- a/package.json
+++ b/package.json
@@ -166,6 +166,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "react-router-dom": "^6.25.1",
     "react-test-renderer": "^18.3.1",
     "seedrandom": "^3.0.5",
     "snaplet": "^0.88.2",
