--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "lint": "npm run typecheck && next lint --dir . --ignore-path .gitignore",
     "lint_fix": "npm run typecheck && next lint --fix --dir . --ignore-path .gitignore",
     "lint:ci": "next lint --dir . --ignore-path .gitignore && npm run typecheck",
-    "test": "start-server-and-test start:test_server 3200 cypress:all",
-    "test:component": "start-server-and-test start:test_server 3200 cypress:component",
-    "test:e2e": "start-server-and-test start:test_server 3200 cypress:e2e",
+    "test": "npm run cypress:all && npm run jest:all",
+    "test:component": "npm run cypress:component && npm run jest:component",
+    "test:e2e": "cypress:e2e",
     "test:coverage": "npm run coverage:generate && npm run coverage:run_tests || npm run coverage:report",
     "cypress:all": "npm run cypress:component && npm run cypress:e2e",
-    "cypress:component": "npx cypress run --component",
-    "cypress:e2e": "npx cypress run --e2e",
+    "cypress:component": "start-server-and-test start:test_server 3200 'npx cypress run --component'",
+    "cypress:e2e": "start-server-and-test start:test_server 3200 'npx cypress run --e2e'",
     "cypress:open": "start-server-and-test 'next start -p 3100' 3100 'npx cypress open --config baseUrl=http://localhost:3100'",
+    "jest:all": "npm run jest:component", 
+    "jest:component": "npx jest",
     "coverage:generate": "nyc instrument --delete src .nyc_output --compact=false --all",
     "coverage:run_tests": "start-server-and-test 'nyc npm run start:test_server' 3200 cypress:e2e",
     "coverage:report": "nyc report --reporter text && nyc report --reporter text-summary",
