VFB-292 Rewrite Action and Status Bar tests in jest (#442)

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "npm run typecheck && next lint --dir . --ignore-path .gitignore",
     "lint_fix": "npm run typecheck && next lint --fix --dir . --ignore-path .gitignore",
     "lint:ci": "next lint --dir . --ignore-path .gitignore && npm run typecheck",
-    "test": "npm run cypress:all && npm run jest:all",
+    "test": "npm run jest:all && npm run cypress:all",
     "test:component": "npm run cypress:component && npm run jest:component",
     "test:e2e": "cypress:e2e",
     "test:coverage": "npm run coverage:generate && npm run coverage:run_tests || npm run coverage:report",
@@ -44,22 +44,6 @@
     "extension": [
       ".ts",
       ".tsx"
-    ]
-  },
-  "jest": {
-    "moduleNameMapper": {
-      "@/(.*)$": "<rootDir>/src/$1"
-    },
-    "testEnvironment": "node",
-    "transform": {
-      "^.+.tsx?$": [
-        "ts-jest",
-        {}
-      ]
-    },
-    "modulePaths": [
-      "<rootDir>/src",
-      "<rootDir>/node_modules"
     ]
   },
   "dependencies": {
@@ -107,18 +91,26 @@
     "start-server-and-test": "^2.0.0",
     "styled-components": "^6.0.4",
     "supabase": "^1.142.2",
-    "typescript": "^5.5.3",
+    "typescript": "^5.5.3", 
     "uuid": "^9.0.1",
     "winston": "^3.12.0",
     "winston-cloudwatch": "^6.2.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.24.8",
+    "@babel/core": "^7.24.9",
+    "@babel/preset-env": "^7.24.8",
+    "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
+    "@babel/types": "^7.24.9",
     "@cypress/code-coverage": "^3.11.0",
     "@jest/globals": "^29.7.0",
     "@next/bundle-analyzer": "^14.2.5",
     "@snaplet/copycat": "^5.0.0",
     "@snaplet/seed": "^0.88.2",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/cypress__code-coverage": "^3.10.0",
     "@types/cypress-dotenv": "^2.0.1",
     "@types/file-saver": "^2.0.7",
@@ -128,6 +120,7 @@
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "axe-core": "^4.7.2",
+    "babel-jest": "^29.7.0",
     "cypress": "^13.1.0",
     "cypress-axe": "^1.5.0",
     "eslint": "^8.43.0",
@@ -141,8 +134,12 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "react-router-dom": "^6.25.1",
+    "react-test-renderer": "^18.3.1",
     "seedrandom": "^3.0.5",
     "snaplet": "^0.88.2",
+    "text-encoding": "^0.7.0",
     "ts-jest": "^29.2.2",
     "ts-node": "^10.9.2"
   }
