VFB-312 Restructure tests for more coverage of the data grid
VFB-312 Refactor variable names

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "cypress:component": "start-server-and-test start:test_server 3200 'npx cypress run --component'",
     "cypress:e2e": "start-server-and-test start:test_server 3200 'npx cypress run --e2e'",
     "cypress:open": "start-server-and-test 'next start -p 3100' 3100 'npx cypress open --config baseUrl=http://localhost:3100'",
-    "jest:all": "npm run jest:component", 
+    "jest:all": "npm run jest:component",
     "jest:component": "npx jest",
     "coverage:generate": "nyc instrument --delete src .nyc_output --compact=false --all",
     "coverage:run_tests": "start-server-and-test 'nyc npm run start:test_server' 3200 cypress:e2e",
@@ -91,7 +91,7 @@
     "start-server-and-test": "^2.0.0",
     "styled-components": "^6.0.4",
     "supabase": "^1.142.2",
-    "typescript": "^5.5.3", 
+    "typescript": "^5.5.3",
     "uuid": "^9.0.1",
     "winston": "^3.12.0",
     "winston-cloudwatch": "^6.2.0"
@@ -115,6 +115,7 @@
     "@types/cypress-dotenv": "^2.0.1",
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.12",
+    "@types/react-test-renderer": "^18.3.0",
     "@types/seedrandom": "^3.0.8",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
