--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Remove irrelevant files that may cause TypeScript errors
         run:
-          rm -f ./supabase/seed/seed.mts
+          rm -f ./supabase/seed/seed.ts
 
       - name: Run linting
         run: npm run lint:ci
@@ -49,7 +49,7 @@ jobs:
 
       - name: Remove irrelevant files that may cause TypeScript errors
         run:
-          rm -f ./supabase/seed/seed.mts
+          rm -f ./supabase/seed/seed.ts
 
       - name: Compile
         run: npm run build
@@ -107,7 +107,7 @@ jobs:
 
       - name: Remove irrelevant files that may cause TypeScript errors
         run:
-          rm -f ./supabase/seed/seed.mts
+          rm -f ./supabase/seed/seed.ts
 
       - name: Compile
         run: npm run build
@@ -143,6 +143,6 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-  
+
       - name: Run jest tests
         run: npm run jest:all
