VFB-343 refactor checks pipeline

--- a/.github/workflows/verify-generated-database-types.yml
+++ b/.github/workflows/verify-generated-database-types.yml
@@ -1,11 +1,4 @@
-name: Verify generated database types
-on:
-  pull_request:
-  merge_group:
-  push:
-    branches:
-      - dev
-      - main
+on: workflow_call
 
 jobs:
   verify-database-types:
