--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "@types/cypress-dotenv": "^2.0.1",
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.7",
     "@types/react-test-renderer": "^18.3.0",
     "@types/seedrandom": "^3.0.8",
     "@types/uuid": "^9.0.8",
@@ -136,6 +137,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "lodash": "^4.17.21",
     "react-router-dom": "^6.25.1",
     "react-test-renderer": "^18.3.1",
     "seedrandom": "^3.0.5",
