--- a/package.json
+++ b/package.json
@@ -85,12 +85,12 @@
     "dotenv": "^16.3.1",
     "encoding": "^0.1.13",
     "file-saver": "^2.0.5",
-    "next": "^13.4.19",
+    "next": "^14.2.13",
     "nyc": "^15.1.0",
     "pdf-parse": "^1.1.1",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-data-table-component": "^7.5.4",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
     "start-server-and-test": "^2.0.0",
     "styled-components": "^6.0.4",
@@ -129,7 +129,7 @@
     "cypress": "^13.1.0",
     "cypress-axe": "^1.5.0",
     "eslint": "^8.43.0",
-    "eslint-config-next": "^13.4.6",
+    "eslint-config-next": "^14.2.13",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-import": "^2.28.1",
