--- a/package.json
+++ b/package.json
@@ -76,10 +76,10 @@
     "@types/file-saver": "^2.0.7",
     "@types/node": "20.3.1",
     "@types/pdf-parse": "^1.1.1",
-    "@types/react": "18.2.13",
-    "@types/react-dom": "18.2.6",
-    "@types/react-fontawesome": "^1.6.5",
-    "@types/react-modal": "^3.16.0",
+    "@types/react": "^18.3.10",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-fontawesome": "^1.6.8",
+    "@types/react-modal": "^3.16.3",
     "@types/uuid": "^9.0.8",
     "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
