--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "dotenv": "^16.3.1",
     "encoding": "^0.1.13",
     "file-saver": "^2.0.5",
+    "mediaquerylist.addeventlistener": "^1.0.0",
     "next": "^13.4.19",
     "nyc": "^15.1.0",
     "pdf-parse": "^1.1.1",
