--- a/package.json
+++ b/package.json
@@ -65,8 +65,8 @@
     "@fullcalendar/react": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
-    "@mui/icons-material": "^6.1.3",
-    "@mui/material": "^6.1.3",
+    "@mui/icons-material": "^5.14.0",
+    "@mui/material": "^5.15.14",
     "@mui/x-data-grid": "^6.19.6",
     "@mui/x-date-pickers": "^6.10.2",
     "@react-pdf/renderer": "^3.1.12",
@@ -112,8 +112,9 @@
     "@next/bundle-analyzer": "^14.2.5",
     "@snaplet/copycat": "^5.0.0",
     "@snaplet/seed": "^0.88.2",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.4.6",
-    "@testing-library/react": "^16.0.0",
+    "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/cypress__code-coverage": "^3.10.0",
     "@types/cypress-dotenv": "^2.0.1",
