--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-transformer-svg": "^2.0.2",
     "react-router-dom": "^6.25.1",
     "react-test-renderer": "^18.3.1",
     "seedrandom": "^3.0.5",
