VFB-282: Remove references to Cypress component tests

--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     "lint_fix": "npm run typecheck && next lint --fix --dir . --ignore-path .gitignore",
     "lint:ci": "next lint --dir . --ignore-path .gitignore && npm run typecheck",
     "test": "npm run jest:all && npm run cypress:all",
-    "test:component": "npm run cypress:component && npm run jest:component",
-    "test:e2e": "cypress:e2e",
+    "test:component": "npm run jest:component",
+    "test:e2e": "npm run cypress:e2e",
     "test:coverage": "npm run coverage:generate && npm run coverage:run_tests || npm run coverage:report",
-    "cypress:all": "npm run cypress:component && npm run cypress:e2e",
-    "cypress:component": "",
+    "cypress:all": "npm run cypress:e2e",
     "cypress:e2e": "start-server-and-test start:test_server 3200 'npx cypress run --e2e'",
     "cypress:open": "start-server-and-test 'next start -p 3100' 3100 'npx cypress open --config baseUrl=http://localhost:3100'",
     "jest:all": "npm run jest:component",
