--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     "lint_fix": "npm run typecheck && next lint --fix --dir . --ignore-path .gitignore",
     "lint:ci": "next lint --dir . --ignore-path .gitignore && npm run typecheck",
     "test": "npm run jest:all && npm run cypress:all",
-    "test:component": "npm run cypress:component && npm run jest:component",
-    "test:e2e": "cypress:e2e",
+    "test:component": "npm run jest:component",
+    "test:e2e": "npm run cypress:e2e",
     "test:coverage": "npm run coverage:generate && npm run coverage:run_tests || npm run coverage:report",
-    "cypress:all": "npm run cypress:component && npm run cypress:e2e",
-    "cypress:component": "start-server-and-test start:test_server 3200 'npx cypress run --component'",
+    "cypress:all": "npm run cypress:e2e",
     "cypress:e2e": "start-server-and-test start:test_server 3200 'npx cypress run --e2e'",
     "cypress:open": "start-server-and-test 'next start -p 3100' 3100 'npx cypress open --config baseUrl=http://localhost:3100'",
     "jest:all": "npm run jest:component",
@@ -53,8 +52,8 @@
   ],
   "dependencies": {
     "@emotion/is-prop-valid": "^1.2.1",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.5",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
@@ -66,7 +65,7 @@
     "@fullcalendar/timegrid": "^6.1.8",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@mui/icons-material": "^5.14.0",
-    "@mui/material": "^5.14.0",
+    "@mui/material": "^5.15.14",
     "@mui/x-data-grid": "^6.19.6",
     "@mui/x-date-pickers": "^6.10.2",
     "@react-pdf/renderer": "^3.1.12",
@@ -76,21 +75,21 @@
     "@types/file-saver": "^2.0.7",
     "@types/node": "20.3.1",
     "@types/pdf-parse": "^1.1.1",
-    "@types/react": "18.2.13",
-    "@types/react-dom": "18.2.6",
-    "@types/react-fontawesome": "^1.6.5",
-    "@types/react-modal": "^3.16.0",
+    "@types/react": "^18.3.10",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-fontawesome": "^1.6.8",
+    "@types/react-modal": "^3.16.3",
     "@types/uuid": "^9.0.8",
     "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "encoding": "^0.1.13",
     "file-saver": "^2.0.5",
-    "next": "^13.4.19",
+    "next": "^14.2.15",
     "nyc": "^15.1.0",
     "pdf-parse": "^1.1.1",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-data-table-component": "^7.5.4",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
     "start-server-and-test": "^2.0.0",
     "styled-components": "^6.0.4",
@@ -112,8 +111,9 @@
     "@next/bundle-analyzer": "^14.2.5",
     "@snaplet/copycat": "^5.0.0",
     "@snaplet/seed": "^0.88.2",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.4.6",
-    "@testing-library/react": "^16.0.0",
+    "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/cypress__code-coverage": "^3.10.0",
     "@types/cypress-dotenv": "^2.0.1",
@@ -126,10 +126,10 @@
     "@typescript-eslint/parser": "^5.62.0",
     "axe-core": "^4.7.2",
     "babel-jest": "^29.7.0",
-    "cypress": "^13.1.0",
+    "cypress": "^13.15.0",
     "cypress-axe": "^1.5.0",
     "eslint": "^8.43.0",
-    "eslint-config-next": "^13.4.6",
+    "eslint-config-next": "^14.2.15",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-import": "^2.28.1",
@@ -140,6 +140,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-transformer-svg": "^2.0.2",
     "react-router-dom": "^6.25.1",
     "react-test-renderer": "^18.3.1",
     "seedrandom": "^3.0.5",
