VFB-NONE: Change assignee of new GitHub issues

--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -2,7 +2,7 @@ name: Feature request
 description: Suggest a feature
 labels: ["enhancement"]
 assignees:
-  - Stuart-Knowles-SW
+  - stonelink
 body:
   - type: markdown
     attributes:
